fixed root issue of seperaotrs showing up on menus in dark mode

--- a/css.css
+++ b/css.css
@@ -101,7 +101,6 @@ h1{
   .header li a {
     display: block;
     padding: 20px 20px;
-    border-right: 1px solid #f4f4f4;
     text-decoration: none;
   }
   .header li a:hover,
